2.4.8:

2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/convert_m4.hg: Use _CONVERT_CONST_REFPTR_TO_P_SUN() instead 
	of _CONVERT_CONST_REFPTR_TO_P(), to hopefully fix the SUN Forte build 
	problems in bug #154973.
	
2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus_and_toolbars: Applied Fredrik Arnerup's patch 
	to add a non-stock icon, with some changes.

2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/hyperlink.hg: get_object(),
	* atk/src/object.hg: get_relation_set(),
	* gdk/src/cursor.hg: get_display(),
	* gdk/src/display.hg: get_default_group(),
	* gdk/src/displaymanager.hg: get_default_display(),
	* gdk/src/drawable.hg: get_screen(), get_display(),
	* gdk/src/event.hg: get_screen(),
	* gdk/src/visual.hg: get_system(), get_best(), get_screen(),
	* gtk/src/widget.hg: get_default_style(), get_default_colormap(),
	get_default_visual(): Use refreturn.

2004-11-11  Cedric Gustin <cedric.gustin@swing.be>

	* examples/book/custom/.cvsignore,
	examples/book/treeview/popup/.cvsignore,
	MSVC_Net2003/*/.cvsignore: Initial release.
	
2004-11-04  Cedric Gustin  <cedric.gustin@swing.be>
  
	* examples/stock/stock.cc, examples/tictactoe/tictactoe.cc: add
	Gtk namespace to "manage" calls (Gtk::manage) as required by MSVC.
	* demos/gtk-demo/demos.h: Create all slots through sigc::ptr_fun
	(required by MSVC).
	* demos/gtk-demo/demowindow.cc: Use a const ref for
	row[columns.slot] slot (required by MSVC).
	* demos/gtk-demo/textwidget.cc: Use default system font on win32.

2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
  
	* MSVC_Net2003/*/Makefile.am: Initial release.
	* configure.in: Added MSVC_Net2003 Makefiles.
	* Makefile.am: Added MSVC_Net2003 subdir.

2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
  
	* MSVC_Net2003/: Added examples and tests projects from Timothy Shead.
	* gtk/gtkmmconfig.h.in: Added dllexport/dllimport macros for
	MSVC. Requires glibmm > 2.4.6 (for glibmmconfig.h).
	
2.4.7:
