@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="atkmm-1.0"
+	Name="atkmm-1.6"
 	ProjectGUID="{9FE0D5A6-458C-45C7-B954-2C3C1E6196C2}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../atk"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;ATKMM_BUILD"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -33,7 +33,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="atk-1.0.lib glib-2.0.lib gobject-2.0.lib sigc.lib glibmm-2.4.lib"
+				AdditionalDependencies="atk-1.0.lib glib-2.0.lib gobject-2.0.lib sigc-2.0d.lib glibmm-2.4d.lib"
+				OutputFile="$(OutDir)/$(ProjectName)d.dll"
 				ModuleDefinitionFile="$(TargetName).def"
 				GenerateDebugInformation="TRUE"/>
 			<Tool
@@ -45,7 +46,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate atkmm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
@@ -79,7 +81,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="atk-1.0.lib glib-2.0.lib gobject-2.0.lib sigc.lib glibmm-2.4.lib"
+				AdditionalDependencies="atk-1.0.lib glib-2.0.lib gobject-2.0.lib sigc-2.0.lib glibmm-2.4.lib"
 				ModuleDefinitionFile="$(TargetName).def"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -90,7 +92,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate atkmm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
