@@ -35,7 +35,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gdk-win32-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="sigc-2.0d.lib glibmm-2.4d.lib gdk-win32-2.0.lib glib-2.0.lib"
 				OutputFile="$(OutDir)/gtk-demo.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -84,7 +84,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gdk-win32-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="sigc-2.0.lib glibmm-2.4.lib gdk-win32-2.0.lib glib-2.0.lib"
 				OutputFile="$(OutDir)/gtk-demo.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
