@@ -34,7 +34,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib sigc-2.0d.lib glibmm-2.4d.lib"
 				OutputFile="$(OutDir)/gdk.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -83,7 +83,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib glibmm-2.4.lib sigc-2.0.lib"
 				OutputFile="$(OutDir)/gdk.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
