@@ -1,1 +1,8 @@
-EXTRA_DIST = gdkmm.vcproj gdkmmconfig.h
+BUILT_SOURCES = gdkmmconfig.h
+
+MAINTAINERCLEANFILES = $(built_sources)
+
+EXTRA_DIST = gdkmmconfig.h gdkmm.vcproj
+
+gdkmmconfig.h: $(top_builddir)/gdk/gdkmmconfig.h
+	cp -f $< $@
