@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;../../pango;../../gdk;../../gtk"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;GDKMM_BUILD"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -33,7 +33,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib gtk-win32-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib gtk-win32-2.0.lib sigc-2.0d.lib glibmm-2.4d.lib"
+				OutputFile="$(OutDir)/$(ProjectName)d.dll"
 				ModuleDefinitionFile="$(TargetName).def"
 				GenerateDebugInformation="TRUE"/>
 			<Tool
@@ -45,7 +46,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate gdkmm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
@@ -79,7 +81,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib gtk-win32-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib gtk-win32-2.0.lib glibmm-2.4.lib sigc-2.0.lib"
 				ModuleDefinitionFile="$(TargetName).def"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -90,7 +92,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate gdkmm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
