@@ -1,8 +1,0 @@
-/* gdk/gdkmmconfig.h.  Generated by configure.  */
-#ifndef _GDKMM_CONFIG_H
-#define _GDKMM_CONFIG_H 1
-
-#include <glibmmconfig.h>
-
-#endif /* _GDKMM_CONFIG_H */
-
