@@ -1,1 +1,8 @@
-EXTRA_DIST = gtkmm.vcproj gtkmmconfig.h
+BUILT_SOURCES = gtkmmconfig.h
+
+MAINTAINERCLEANFILES = $(built_sources)
+
+EXTRA_DIST = gtkmmconfig.h gtkmm.vcproj
+
+gtkmmconfig.h: $(top_builddir)/gtk/gtkmmconfig.h
+	cp -f $< $@
