@@ -34,7 +34,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gtk-win32-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gtk-win32-2.0.lib glibmm-2.4d.lib sigc-2.0d.lib"
+				OutputFile="$(OutDir)/$(ProjectName)d.dll"
 				ModuleDefinitionFile="$(TargetName).def"
 				GenerateDebugInformation="TRUE"/>
 			<Tool
@@ -46,7 +47,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate gtkmm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
@@ -81,7 +83,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gtk-win32-2.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib gdk-win32-2.0.lib gtk-win32-2.0.lib glibmm-2.4.lib sigc-2.0.lib"
 				ModuleDefinitionFile="$(TargetName).def"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -92,7 +94,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate gtkmm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
@@ -783,9 +786,6 @@
 				RelativePath="..\..\gtk\gtkmm\paned.h">
 			</File>
 			<File
-				RelativePath="..\..\gtk\gtkmm\plug.h">
-			</File>
-			<File
 				RelativePath="..\..\gtk\gtkmm\progressbar.h">
 			</File>
 			<File
@@ -841,9 +841,6 @@
 			</File>
 			<File
 				RelativePath="..\..\gtk\gtkmm\sizegroup.h">
-			</File>
-			<File
-				RelativePath="..\..\gtk\gtkmm\socket.h">
 			</File>
 			<File
 				RelativePath="..\..\gtk\gtkmm\spinbutton.h">
