@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="pangomm-1.0"
+	Name="pangomm-1.4"
 	ProjectGUID="{6EF7CB5B-9781-4CC0-979B-A067E0A088BB}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../pango"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;PANGOMM_BUILD"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -33,9 +33,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib pango-1.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib pango-1.0.lib sigc-2.0d.lib glibmm-2.4d.lib"
+				OutputFile="$(OutDir)/$(ProjectName)d.dll"
 				ModuleDefinitionFile="$(TargetName).def"
-				GenerateDebugInformation="TRUE"/>
+				GenerateDebugInformation="TRUE"
+				ImportLibrary="$(OutDir)/$(TargetName).lib"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
@@ -45,7 +47,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate pangomm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
@@ -79,7 +82,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib pango-1.0.lib glibmm-2.4.lib sigc.lib"
+				AdditionalDependencies="glib-2.0.lib gobject-2.0.lib pango-1.0.lib glibmm-2.4.lib sigc-2.0.lib"
 				ModuleDefinitionFile="$(TargetName).def"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -90,7 +93,8 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate pangomm def file"
-				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"/>
+				CommandLine="$(SolutionDir)gendef\debug\gendef $(TargetName).def $(TargetFileName) $(IntDir)\*.obj"
+				ExcludedFromBuild="FALSE"/>
 			<Tool
 				Name="VCResourceCompilerTool"/>
 			<Tool
