@@ -1,3 +1,11 @@
+2004-12-08  Cedric Gustin <cedric.gustin@swing.be>
+
+	* MSVC_Net2003/*/*.vcproj: Renamed [gdk|gtk]bmm target to
+	[gdk|gtk]mm-2.4d.dll (Debug) and [gdk|gtk]mm-2.4.dll
+	(Release). Same for atkmm-1.6 and pangomm-1.4.
+	* MSVC_Net2003/[gdk|gtk]mm/Makefile.am: copy [gdk|gtk]mmconfig.h
+	from $(top_builddir)/[gdk|gtk]mm at build time.
+
 2.4.8:
 
 2004-11-30  Murray Cumming  <murrayc@murrayc.com>
